# claude-code-aad

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  HANDOFF.md  LICENSE  README.md
crates/application/: Cargo.toml
crates/application/.aad/: loop-state.json
crates/application/.aad/escalations/: 2026-01-18_11-48-33_3076d5cb-28f9-4fe5-9e34-5812a4064396.md  2026-01-18_11-48-33_3dc14ed2-2901-4481-8a5d-ac9e0803e29f.md  2026-01-18_11-48-33_3f41b435-6b40-4a7a-be79-ed87af371214.md  2026-01-18_12-14-49_010c3e1c-a75b-4f12-87e9-120ceecdda3f.md  2026-01-18_12-14-49_0d3ba8d2-b354-4792-94ef-bb0beae0068c.md  2026-01-18_12-14-49_806c244a-ed8b-4014-9026-74f44402506f.md  2026-01-18_12-27-55_4624779a-de17-43e9-9e9e-e1e1e3e6aa92.md  2026-01-18_12-27-55_6e63d3bf-f2dd-42d0-a536-056e0f8f5c13.md  2026-01-18_12-27-55_fc63df63-22d4-4f8c-b29f-d92dbac3eb00.md  2026-01-18_13-48-02_1af4045a-b6de-4de6-b738-c433963d637f.md  2026-01-18_13-48-02_c02814f0-aba0-4db2-8063-ecff53691721.md  2026-01-18_13-48-02_c4a8f530-b125-4046-88d1-61bad868cb48.md  2026-01-18_13-54-12_97acbe0e-1e05-465f-bcb9-f98462b7a695.md  2026-01-18_13-54-12_bec3bdfd-ce1c-4fbb-8f10-82c5d2ff99e4.md  2026-01-18_13-54-12_ddc351b4-7409-4d6c-9cd1-99318ee7c433.md  2026-01-18_14-07-09_582f8aa6-5831-46ec-9e25-44a1d96aea31.md  2026-01-18_14-07-09_aa71fb3b-91bf-4521-9a71-f781cafb407a.md  2026-01-18_14-07-09_f350053d-1f92-41d0-a88d-e70c3d3f9ada.md  2026-01-18_14-59-28_680a8d21-3a8c-4393-8a5b-dfc763d84ec8.md  2026-01-18_14-59-28_a708fd5a-5dbe-4075-a5d3-d8ca233f3453.md  2026-01-18_14-59-28_f5df464e-7cbb-496c-86b9-36981604f418.md  2026-01-18_15-02-56_949194e7-6dc8-4b13-b753-1f25bd0448d3.md  2026-01-18_15-02-56_ba6eb0b5-d284-4daa-9892-31fe1fa7d7bb.md  2026-01-18_15-02-56_e2c95131-c88e-4557-a8ff-2cae6b2d1c80.md  2026-01-18_15-03-53_1eeae650-7b6c-4910-b3ba-8bbb42b2363f.md  2026-01-18_15-03-53_c3b32c36-cc16-4693-b461-94b2a0f68ccb.md  2026-01-18_15-03-53_cd731d26-2b4d-4dee-af47-20eef58c5474.md  2026-01-18_15-04-45_305a1475-6a09-4822-9a5a-4aa322b6fee5.md  2026-01-18_15-04-45_c2bebede-e704-4805-a762-80609e9f2e82.md  2026-01-18_15-04-45_e8f848b7-29ff-4676-bfc6-735bd5ab4ffe.md  2026-01-18_15-27-42_83d4a888-126b-4761-8926-0a0ae661dbcc.md  2026-01-18_15-27-42_a489ffbc-da22-4c60-a9f9-b07571c16c80.md  2026-01-18_15-27-42_f2244eab-144d-4fd0-8341-6aab9ded33b3.md
crates/application/.aad/orchestration/: state.json
crates/application/src/: error.rs  lib.rs
crates/application/src/integration/: integration_service.rs  mod.rs
crates/application/src/loop_engine/: completion_detector.rs  engine.rs  mod.rs
crates/application/src/orchestration/: config.rs  dependency_graph.rs  escalation.rs  mod.rs  monitor.rs  orchestrator.rs  state.rs
crates/application/src/quality/: mod.rs  quality_service.rs
crates/application/src/workflow/: mod.rs  transition.rs
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  main.rs
crates/cli/src/commands/: gate_cmd.rs  init.rs  integrate_cmd.rs  loop_cmd.rs  mod.rs  monitor.rs  orchestrate.rs  persist.rs  retro_cmd.rs  spec.rs  style.rs  tasks.rs  worktree.rs
crates/cli/templates/: CLAUDE.md  aad.toml  styles.toml
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  lib.rs
crates/domain/src/entities/: escalation.rs  loop_state.rs  mod.rs  quality_gate.rs  session.rs  spec.rs  style.rs  task.rs  workflow.rs
crates/domain/src/repositories/: mod.rs  session_repository.rs  (+2 more)
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: error.rs  lib.rs
(+231 files in other folders)
