[workspace]
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/cli", "crates/tui",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Claude Code"]
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"

# Testing utilities
uuid = { version = "1.6", features = ["v4", "serde"] }

# Async traits
async-trait = "0.1"
