[package]
name = "application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }

# Workspace dependencies
chrono = { workspace = true }
regex = "1.10"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
