[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aad"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
domain = { path = "../domain" }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
