[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
domain = { path = "../domain" }

# Configuration
toml = "0.8"

# Persistence
serde_json = "1.0"
async-trait = "0.1"
tokio = { workspace = true }
chrono = { workspace = true }

# Workspace dependencies
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
